--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^5.6.0",
     "eslint-config-brcjs": "^0.2.0",
     "expect.js": "^0.3.1",
+    "i18nc-test-req": "^1.0.0",
     "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0"
